[project]
name = "optimal-prime-rl-env"
version = "0.1.0"
description = "OpenEnv packet scheduling reinforcement learning environment"
authors = [{ name = "Manasvi Bakshi" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "requests"
]

[tool.setuptools]
packages = ["server"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
